[gd_scene load_steps=9 format=3 uid="uid://d5ojgqacper6"]

[ext_resource type="Script" path="res://bodies/protoeva.gd" id="1_i8kqf"]
[ext_resource type="PackedScene" uid="uid://bmraoqhu0omwj" path="res://obj/equipments/arm/r_protoeva.tscn" id="2_c40tk"]
[ext_resource type="PackedScene" uid="uid://dmijduq3pmxpo" path="res://obj/equipments/leg/r_protoeva.tscn" id="3_qwk8d"]
[ext_resource type="PackedScene" uid="uid://dn1qeba2556lr" path="res://obj/equipments/armor/protoeva.tscn" id="4_nxvmv"]
[ext_resource type="PackedScene" uid="uid://dyk3qo76yjw1a" path="res://obj/equipments/head/protoeva_head.tscn" id="5_br6n2"]
[ext_resource type="PackedScene" uid="uid://cyqetcxwekiw1" path="res://obj/equipments/arm/l_protoeva.tscn" id="6_0ikca"]
[ext_resource type="PackedScene" uid="uid://dth1vbablqfcj" path="res://obj/equipments/leg/l_protoeva.tscn" id="6_sxt1i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fmben"]
height = 66.0

[node name="boss" type="CharacterBody2D"]
script = ExtResource("1_i8kqf")

[node name="r_arm" type="Node2D" parent="."]
position = Vector2(-37, -2)

[node name="img" parent="r_arm" instance=ExtResource("2_c40tk")]
flip_h = true

[node name="r_leg" type="Node2D" parent="."]
position = Vector2(-32, -5)

[node name="img" parent="r_leg" instance=ExtResource("3_qwk8d")]
position = Vector2(24, 39)
flip_h = true

[node name="armor" type="Node2D" parent="."]

[node name="img" parent="armor" instance=ExtResource("4_nxvmv")]
flip_h = true

[node name="head" type="Node2D" parent="."]
position = Vector2(-9, 9)

[node name="img" parent="head" instance=ExtResource("5_br6n2")]
position = Vector2(0, -29)
flip_h = true

[node name="l_leg" type="Node2D" parent="."]
position = Vector2(-4, 0)

[node name="img" parent="l_leg" instance=ExtResource("6_sxt1i")]
position = Vector2(2, 36)
flip_h = true

[node name="l_arm" type="Node2D" parent="."]
position = Vector2(-6, 7)

[node name="img" parent="l_arm" instance=ExtResource("6_0ikca")]
position = Vector2(-5, -11)
flip_h = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_fmben")

[node name="timers" type="Node2D" parent="."]

[node name="r_attack_timer" type="Timer" parent="timers"]

[node name="l_attack_timer" type="Timer" parent="timers"]

[node name="status_node" type="Node2D" parent="."]

[connection signal="timeout" from="timers/r_attack_timer" to="." method="_on_r_attack_timer_timeout"]
[connection signal="timeout" from="timers/l_attack_timer" to="." method="_on_l_attack_timer_timeout"]
